# my-cs-go

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
assets/maps/: README.md  depot_lab.arena
assets/source/itchio/classic64/: Changelog v0.5.txt
assets/source/polyhaven/: README.md
assets/source/polyhaven/materials/concrete_floor/: _meta.json
assets/source/polyhaven/materials/concrete_wall_006/: _meta.json
assets/source/polyhaven/materials/painted_concrete/: _meta.json
assets/source/polyhaven/models/Barrel_02/: _meta.json
assets/source/polyhaven/models/wooden_crate_02/: _meta.json
assets/source/weapons/: README.md
cmake/toolchains/: windows-x64-llvm-mingw.cmake  windows-x64-mingw.cmake
docs/: ARCHITECTURE.md
src/: editor_main.cpp  main.cpp
src/app/: Application.cpp  Application.h  MainMenu.cpp  MainMenu.h  Settings.cpp  Settings.h
src/audio/: AudioSystem.cpp  AudioSystem.h
src/content/: AssetManifest.cpp  AssetManifest.h  GameContent.cpp  GameContent.h  ObjectCatalog.cpp  ObjectCatalog.h
src/gameplay/: EcsComponents.h  MapData.cpp  MapData.h  PhysicsWorld.cpp  PhysicsWorld.h  Simulation.cpp  Simulation.h
src/network/: Network.cpp  Network.h
src/platform/: Window.h
src/platform/null/: NullWindow.cpp
src/platform/win32/: Win32Window.cpp
src/renderer/: Renderer.h
src/renderer/font/: GeneratedUiFontData.cpp  GeneratedUiFontData.h
src/renderer/vulkan/: MeshRuntime.cpp  MeshRuntime.h  VulkanRenderer.cpp  VulkanRendererImGui.inl  VulkanRendererImGuiCore.inl  VulkanRendererImGuiMapEditor.inl  VulkanRendererImGuiMapEditorAssets.inl  VulkanRendererImGuiMapEditorPanels.inl  VulkanRendererImGuiMultiplayer.inl
src/renderer/vulkan/shaders/: mesh.frag  mesh.vert  mesh_instanced.vert  text.frag  text.vert
src/util/: FileSystem.cpp  FileSystem.h  Log.cpp  Log.h  MapEditorCameraMath.h  MathTypes.h
tools/: build-windows-cross.sh  configure-windows-cross.sh  copy-windows-package.sh  font_atlas_baker.cpp  generate-mesh-cache.py  generate-mesh-shaders.sh  generate-ui-font.sh  list-gltf-submodels.py  ui_font_charset.txt
